<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/me_search"
            android:title="@string/menu_search"
            android:icon="@drawable/ic_round_search_24px"
            android:actionViewClass="android.widget.SearchView"
            android:showAsAction="collapseActionView|always"
            tools:ignore="AppCompatResource" />

        <item
            android:id="@+id/me_sort_most_popular"
            android:title="@string/menu_show_most_popular"
            app:showAsAction="never" />

        <item android:id="@+id/me_sort_hightest_rated"
            android:title="@string/menu_show_highest_rated"
            app:showAsAction="never" />

        <!--TODO: strings value and translate-->
        <item android:id="@+id/me_to_favorites"
            android:title="@string/favorites"
            app:showAsAction="never"/>

        <item android:id="@+id/me_settings"
            android:title="@string/menu_settings"
            app:showAsAction="never" />
</menu>